dev_iPlayMusic/sys/iPlayMusic.css
/*
    Document   : iPlayMusic
    Created on : Sep 5, 2011, 6:14:07 PM
    Author     : jnaO
    Description:
        Default styles for iPlayMusic HTML5/JavaScript/PHP musicplayer
*/
#iPlayMusic_article {
    margin: 0 0 55px;
    padding: 0;
    overflow: hidden;
    position: relative;
    top: 0px;
    width: 100%;
    background-color: rgba(0,0,0,0.2);
    -webkit-tap-highlight-color: rgba(0,0,0,0); 
}
.contracted {
    height: 55px;
    -webkit-transition: height 0.5s ease-in-out;
    -moz-transition: height 0.5s ease-in-out;
    -o-transition: height 0.5s ease-in-out;
    -ms-transition: height 0.5s ease-in-out;
    transition: height 0.5s ease-in-out;
}
.expanded {
    -webkit-transition: height 0.5s ease-in-out;
    -moz-transition: height 0.5s ease-in-out;
    -o-transition: height 0.5s ease-in-out;
    -ms-transition: height 0.5s ease-in-out;
    transition: height 0.5s ease-in-out;
    height: 260px;
}
audio {
    height: 1px;
    width: 1px;
    margin: 0;
    padding: 0;
}

/* an ugly hack for FF to fix so my canvas is only 1 px high */

#progressbar {
    background-color: rgba(50,50,50,0.4);
    position: absolute;
    margin: 0;
    bottom: 0;
    height: 2px;
    width: 100%;
}
#track_list_container {
    text-align: center;
    margin: 20px auto 0;
}
#track_list {
    margin: 0;
    padding: 0 0 0 20px;
    max-width: 200px;
    display: inline-block;
    text-align: left;
    vertical-align: top;
    color: #fff;
    list-style: none;
}
#track_list li {
    cursor: pointer;
}
#track_list_container img {
    max-width: 160px;
    box-shadow: 2px 2px 2px #222;
}

.active_track {
    font-weight: bold;
}
img#album_cover {
    margin: 20px 20px 20px 0;
}
.song_link:hover {
    font-weight: bolder;
}

.slider {
    background-color: #07b;
    height: 4px;
    position: relative;
    cursor: pointer;
    border:1px solid #333;
    width:442px;
    float: left;
    clear: right;
    margin-top:10px;
    -moz-border-radius:5px;
    -webkit-border-radius:5px;
}

/* progress bar (enabled with progress: true) */
.progress {
    height:9px;
    background-color:#C5FF00;
    display:none;
    opacity:0.6;
}

/* controls */
#controls {
    margin: 0 auto;
    padding: 0;
    width: 300px;
    height: 50px;
    position: relative;
    top: opx;
}

#controls li {
    margin: 0;
    padding: 0;
    list-style: none;
    position: absolute;
    top: 0;
}
#controls li, #controls a {
    height: 50px;
    display: inline-block;
}
#controls_previous {
    left: 0px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') -150px 0px no-repeat;
}
.play {
    left: 50px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') 0px 0px no-repeat;
}
.pause {
    left: 50px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') -50px 0px no-repeat;
}
#controls_stop {
    left: 100px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') -100px 0px no-repeat;
}
#controls_next {
    background: transparent url('../sys/controls_sprite.png') -200px 0px no-repeat;
    left: 150px;
    width: 50px;
}
.repeat_0 {
    left: 200px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') 0px -50px no-repeat;
}
.repeat_1 {
    left: 200px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') -50px -50px no-repeat;
}
.repeat_2 {
    left: 200px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') -100px -50px no-repeat;
}
.isExpanded_false {
    left: 250px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') -50px -100px no-repeat;
}
.isExpanded_true {
    left: 250px;
    width: 50px;
    background: transparent url('../sys/controls_sprite.png') 0px -100px no-repeat;
}

/* Floats & Clearer  */

.left, .float_left {
    float: left;
}
.float_right {
    float: right;
}
.clearer {
    clear: both;
    height: 0px;
    width: 0px;
}
.clear {
    clear: both;
}
.hidden {
    display: none;
}
.pfat {
    font-weight: bold;
}

